--- a/조별과제수정/Main/css/main.css
+++ b/조별과제수정/Main/css/main.css
@@ -131,7 +131,7 @@ section
     margin-bottom: 600px;
     font-size: 3.0em;
     font-weight: 700;
-    color: #fff;
+    color: rgb(0, 0, 0);
     font-family: 'Hurricane', cursive;
     font-family: 'Permanent Marker', cursive;
 }
@@ -143,7 +143,7 @@ section
     align-items: center;
     text-align: center;
     min-height: 100vh;
-    background: #262626;
+    background: #ffffff;
 }
 
 .container
@@ -229,12 +229,12 @@ section
 /*세번째 페이지*/
 .services
 {
-    background: rgb(61, 59, 59);
+    background: rgb(140, 140, 140);
 }
 
 .heading.white
 {
-    color: #fff;
+    color: rgb(0, 0, 0);
 }
 .services .content
 {
@@ -247,8 +247,8 @@ section
 .services .content .servicesBx
 {
     padding: 40px 20px;
-    background: rgb(85, 76, 76);
-    color: #fff;
+    background: rgb(130, 176, 255);
+    color: rgb(0, 0, 0);
     max-width: 340px;
     margin: 20px;
     text-align: center;
